--- a/main.html
+++ b/main.html
@@ -1,19 +1,55 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-<title>Volume of a Sphere</title>
-<style> 
-body{padding-top:30px;}
-label,input{display:block;} 
-</style>
+    <meta charset="utf-8">
+    <title>Sphere Volume Calculator</title>
+    <style>
+        body { padding: 20px; font-family: sans-serif; }
+        label { display: block; margin-top: 10px; }
+        input { margin-bottom: 10px; padding: 5px; }
+    </style>
 </head>
 <body>
-	<p>Input radius value and get the volume of a sphere.</p>
-	<form action="" method="post" id="MyForm">
-	<label for="radius">Radius</label><input type="text" name="radius" id="radius" required>
-	<label for="volume">Volume</label><input type="text" name="volume" id="volume">
-	<input type="submit" value="Calculate" id="submit">    </form>
-	<script type="text/javascript" src="./script.js"></script>
+    <form id="MyForm">
+        <label for="radius">Radius</label>
+        <input type="text" id="radius" required>
+
+        <label for="volume">Volume</label>
+        <input type="text" id="volume" readonly>
+
+        <br>
+        <input type="submit" value="Calculate" id="submit">
+    </form>
+
+    <script>
+        function volume_sphere(event) {
+            // Prevent the page from reloading on form submit
+            if (event) event.preventDefault();
+
+            const radiusField = document.getElementById('radius');
+            const volumeField = document.getElementById('volume');
+            
+            // Get value and convert to float
+            const r = parseFloat(radiusField.value);
+
+            // Validation: Return NaN for invalid or negative numbers
+            if (isNaN(r) || r < 0) {
+                volumeField.value = 'NaN';
+                return;
+            }
+
+            // Calculation: (4/3) * pi * r^3
+            const volume = (4 / 3) * Math.PI * Math.pow(r, 3);
+
+            // Round to 4 decimal places
+            volumeField.value = volume.toFixed(4);
+        }
+
+        // Attach the function to the form submission
+        window.onload = function() {
+            const form = document.getElementById('MyForm');
+            form.onsubmit = volume_sphere;
+        };
+    </script>
 </body>
 </html>
